[package]
name = "drc_crawl"
version = "1.0.0"
edition = "2021"
description = "High-Performance Rust Sitemap Crawler with Web Dashboard & Background Scheduling"
authors = ["Your Name"]
license = "MIT"

[[bin]]
name = "drc-crawl"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
scraper = "0.19"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
inquire = "0.7"
rand = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
cron = "0.12"
nix = { version = "0.29", features = ["user"] }
